# FX_Plus

./: .gitignore  README.md  pyproject.toml  setup.py  triton_test.py
benchmark/xmlcnn/: xmlcnn.json  xmlcnn.py  xmlcnn.td  xmlcnn_impl.py  xmlcnn_profiler.py
benchmark/xmlcnn/model/: xmlcnn.json  xmlcnn.py  xmlcnn.td
document/: table_definition.md
src/fx_plus/: __init__.py
src/fx_plus/compiler/: __init__.py  backend.py  pass_manager.py
src/fx_plus/compiler/passes/: __init__.py  pass_constant_propagation.py  pass_cse.py  pass_decomposition.py  pass_eliminate_loss.py  pass_fake_shape_infer.py  pass_frontend.py  pass_graph_drawer.py  pass_triton_fusion.py
src/fx_plus/compiler/passes/triton_ops/: __init__.py  addmm.py
src/fx_plus/compiler/passes/triton_ops/addmm_sigmoid/: addmm_sigmoid.py  pattern.py
src/fx_plus/compiler/passes/triton_ops/mm_dp_relu_bp/: mm_dp_relu_bp.py  pattern.py
src/fx_plus/compiler/passes/triton_ops/xmlcnn_loss/: pattern.py  (+1 more)
src/fx_plus/compiler/utils/: __init__.py  get_attr.py
src/fx_plus/helper/: __init__.py  test_helper.py
src/fx_plus/models/: __init__.py  canonize.py
src/fx_plus/models/tablegen/: __init__.py  emiter.py  obj.py  parser.py
src/fx_plus/triton_codegen/: __init__.py  codegen.py
src/fx_plus/triton_codegen/templates/: __init__.py  matmul.py  template_base.py
unittest/constant_propagation/: constant_prop.py  constant_prop.td  constant_prop_impl.py
unittest/decomposition/: decomposition.py  decomposition.td  decomposition_impl.py
unittest/frontend/: frontend.py  frontend.td  frontend_impl.py  test1.py
