[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx_plus"
version = "0.0.1"
authors = [
  { name="Carina Quan", email="yuying_quan@ucsb.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
canonize_models = "fx_plus:canonize_models"

[project.urls]
Homepage = "https://github.com/Carinaqyy/FX_Plus"
Issues = "https://github.com/Carinaqyy/FX_Plus/issues"
